Update UI to include Dark mode. Fixed Buff Data outputs.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -3,3 +3,17 @@
     font-family: 'Arial', sans-serif;
     font-weight: bold;
 }
+
+.buff-category-heading {
+    padding: 10px 15px;
+    background-color: #f8f9fa;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    font-weight: bold;
+}
+
+
+ .dropdown-item {
+   padding: 10px 15px;
+  }
+
